--- a/index.html
+++ b/index.html
@@ -4,9 +4,64 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HLegal - law company</title>
+    <meta name="keywords" content="law, company, business">
+    <meta name="description" content="HLegal - you legal solutions provider.">
+
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <div class="color-background">
+        <div class="wrapper">
+            <a href="#"><span class="link-right-arrow">Services</span></a>
+            <h3 class="h3-pink">What can we do better than others?</h3>
+            <div class="services-blocks">
+                <div class="services-block">
+                    <div class="services-icon">
+                        <img src="./assets/images/ecommerce-icon.svg" alt="ecommerce" width="64" height="64" class="services-img">
+                    </div>
+                <h4 class="services-title">IT and e-commerce</h4>
+                <p class="services-description">An endless stream of contracts, tax issues, labor relations, corporate papers - legal work distracts you from doing business. But there is not much work to do to hire an in-house lawyer.</p>
+                </div>
+                <div class="services-block">
+                    <div class="services-icon">
+                        <img src="./assets/images/support-icon.svg" alt="support" width="64" height="64" class="services-img">
+                    </div>
+                    <h4 class="services-title">Comprehensive daily legal support</h4>
+                    <p class="services-description">In addition, over time, the work will become the same type and uninteresting for a full-time lawyer. And we know very well how difficult it is to find a good candidate with experience in the field of information technology in Ukraine.</p>
+                </div>
+                <div class="services-block">
+                    <div class="services-icon">
+                        <img src="./assets/images/corporate-icon.svg" alt="corporate" width="64" height="64" class="services-img">
+                    </div>
+                    <h4 class="services-title">Structuring corporate relationships</h4>
+                    <p class="services-description">Instead of just providing legal services, we will hire a lawyer or a whole team that will fit into the daily life of your company.</p>
+                </div>
+                <div class="services-block">
+                    <div class="services-icon">
+                        <img src="./assets/images/trust-icon.svg" alt="trust" width="64" height="64" class="services-img">
+                    </div>
+                    <h4 class="services-title">Building contractual relations</h4>
+                    <p class="services-description">Once a week, or week after month, you have your own lawyer by your side. Anyone in the company can catch it at the coffee maker and just talk about current affairs instead of waiting for update status.</p>
+                </div>
+                <div class="services-block">
+                    <div class="services-icon">
+                        <img src="./assets/images/protection-icon.svg" alt="protection" width="64" height="64" class="services-img">
+                    </div>
+                    <h4 class="services-title">Protection of business, intellectual property</h4>
+                    <p class="services-description">And all the other time he will work on new diverse projects, so he will definitely not stop in professional development. One way or another, all Axon Partners will work for you instead of a corporate lawyer.</p>
+                </div>
+                <div class="services-block">
+                    <div class="services-icon">
+                        <img src="./assets/images/court-icon.svg" alt="court" width="64" height="64" class="services-img">
+                    </div>
+                    <h4 class="services-title">Judicial representation</h4>
+                    <p class="services-description">Is it a small, medium-sized company or a market leader? Local business or multinational company? Do you have your own legal department or not?</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="color-background-1"></div>
+    <div class="color-background-2"></div>
 </body>
 </html>
