create logos section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="color-background">
+    <section class="main-services">
         <div class="wrapper">
             <a href="#"><span class="link-right-arrow">Services</span></a>
             <h3 class="h3-pink">What can we do better than others?</h3>
@@ -60,8 +60,44 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="color-background-1"></div>
-    <div class="color-background-2"></div>
+    </section>
+    <section class="logos">
+        <a href="#" class="logos-main logos-1">
+            <img src="./assets/images/hillel-logo.png" alt="hillel" width="217" height="48">
+        </a>
+        <a href="#" class="logos-main logos-2">
+            <img src="./assets/images/wannabiz-logo.png" alt="wannabiz" width="199" height="32">
+        </a>
+        <a href="#" class="logos-main logos-3">
+            <img src="./assets/images/tapgerine-logo.png" alt="tapgerine" width="179" height="44">
+        </a>
+        <a href="#" class="logos-main logos-4">
+            <img src="./assets/images/3dlook-logo.png" alt="3dlook" width="180" height="42">
+        </a>
+        <a href="#" class="logos-main logos-5">
+            <img src="./assets/images/orangear-logo.png" alt="orangear" width="174" height="44">
+        </a>
+        <a href="#" class="logos-main logos-6">
+            <img src="./assets/images/adtelligint-logo.png" alt="adtelligint" width="195" height="48">
+        </a>
+        <a href="#" class="logos-main logos-7 logos-hidden-7">
+            <img src="./assets/images/clickky-logo.png" alt="clickky" width="138" height="61">
+        </a>
+        <a href="#" class="logos-main logos-8 logos-hidden-8">
+            <img src="./assets/images/ecoleasing-logo.png" alt="ecoleasing" width="146" height="76">
+        </a>
+        <a href="#" class="logos-main logos-9 logos-hidden-9">
+            <img src="./assets/images/infratek-logo.png" alt="infratek" width="182" height="60">
+        </a>
+        <a href="#" class="logos-main logos-10 logos-hidden-10">
+            <img src="./assets/images/citypark-logo.png" alt="citypark" width="181" height="38">
+        </a>
+        <a href="#" class="logos-main logos-11 logos-hidden-11">
+            <img src="./assets/images/artprintstudio-logo.png" alt="artprintstudio" width="189" height="46">
+        </a>
+        <a href="#" class="logos-main logos-12 logos-hidden-12">
+            <img src="./assets/images/ultimate-card-logo.png" alt="ultimate-card" width="152" height="95">
+        </a>
+    </section>
 </body>
 </html>
