--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
             </div>
         </div>
     </section>
+    <span class="bg-1"></span>
+    <span class="bg-2"></span>
     <section class="logos">
         <a href="#" class="logos-main logos-1">
             <img src="./assets/images/hillel-logo.png" alt="hillel" width="217" height="48">
