--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <section class="main-services">
         <div class="wrapper">
-            <a href="#"><span class="link-right-arrow">Services</span></a>
-            <h3 class="h3-pink">What can we do better than others?</h3>
+            <a href="#"><span class="subtitle">Services</span></a>
+            <h3 class="hero">What can we do better than others?</h3>
             <div class="services-blocks">
                 <div class="services-block">
                     <div class="services-icon">
@@ -61,8 +61,8 @@
             </div>
         </div>
     </section>
-    <span class="bg-1"></span>
-    <span class="bg-2"></span>
+    <br>
+    <br>
     <section class="logos">
         <a href="#" class="logos-main logos-1">
             <img src="./assets/images/hillel-logo.png" alt="hillel" width="217" height="48">
