edits in the partners block

--- a/index.html
+++ b/index.html
@@ -82,22 +82,22 @@
         <a href="#" class="logos-main logos-6">
             <img src="./assets/images/adtelligint-logo.png" alt="adtelligint" width="195" height="48">
         </a>
-        <a href="#" class="logos-main logos-7 logos-hidden-7">
+        <a href="#" class="logos-main logos-7">
             <img src="./assets/images/clickky-logo.png" alt="clickky" width="138" height="61">
         </a>
-        <a href="#" class="logos-main logos-8 logos-hidden-8">
+        <a href="#" class="logos-main logos-8">
             <img src="./assets/images/ecoleasing-logo.png" alt="ecoleasing" width="146" height="76">
         </a>
-        <a href="#" class="logos-main logos-9 logos-hidden-9">
+        <a href="#" class="logos-main logos-9">
             <img src="./assets/images/infratek-logo.png" alt="infratek" width="182" height="60">
         </a>
-        <a href="#" class="logos-main logos-10 logos-hidden-10">
+        <a href="#" class="logos-main logos-10">
             <img src="./assets/images/citypark-logo.png" alt="citypark" width="181" height="38">
         </a>
-        <a href="#" class="logos-main logos-11 logos-hidden-11">
+        <a href="#" class="logos-main logos-11">
             <img src="./assets/images/artprintstudio-logo.png" alt="artprintstudio" width="189" height="46">
         </a>
-        <a href="#" class="logos-main logos-12 logos-hidden-12">
+        <a href="#" class="logos-main logos-12">
             <img src="./assets/images/ultimate-card-logo.png" alt="ultimate-card" width="152" height="95">
         </a>
     </section>
