--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="main-services">
         <div class="wrapper">
             <a href="#"><span class="subtitle">Services</span></a>
-            <h3 class="hero">What can we do better than others?</h3>
+            <h3 class="hero hero-services">What can we do better than others?</h3>
             <div class="services-blocks">
                 <div class="services-block">
                     <div class="services-icon">
@@ -61,8 +61,25 @@
             </div>
         </div>
     </section>
-    <br>
-    <br>
+    <div class="wrapper slider">
+        <div class="slider-bg">
+            <div class="slider-blocks">
+                <div class="slider-bg-img">
+                </div>
+                <div class="slider-content">
+                    <a href="#"><span class="subtitle">команда</span></a>
+                    <h3 class="hero">Ми звикли брати на себе відповідальність та завжди гарантуємо чесну, вчасну допомогу, навіть у ситуаціях, коли більшість безсилі.</h3>
+                    <p class="slider-name">Олександр Олександровський</p>
+                    <p class="slider-name-position">Керуючий партнер</p>
+                </div>
+            </div>
+        </div>
+        <div class="circle">
+            <button class="circle-slider circle-slider-active"></button>
+            <button class="circle-slider"></button>
+            <button class="circle-slider circle-slider-last"></button>
+        </div>
+    </div>
     <section class="logos">
         <a href="#" class="logos-main logos-1">
             <img src="./assets/images/hillel-logo.png" alt="hillel" width="217" height="48">
