--- a/index.html
+++ b/index.html
@@ -18,42 +18,42 @@
             <div class="services-blocks">
                 <div class="services-block">
                     <div class="services-icon">
-                        <img src="./assets/images/ecommerce-icon.svg" alt="ecommerce" width="64" height="64" class="services-img">
+                        <img src="./assets/images/ecommerce-icon.svg" alt="ecommerce" width="64" height="64">
                     </div>
                 <h4 class="services-title">IT and e-commerce</h4>
                 <p class="services-description">An endless stream of contracts, tax issues, labor relations, corporate papers - legal work distracts you from doing business. But there is not much work to do to hire an in-house lawyer.</p>
                 </div>
                 <div class="services-block">
                     <div class="services-icon">
-                        <img src="./assets/images/support-icon.svg" alt="support" width="64" height="64" class="services-img">
+                        <img src="./assets/images/support-icon.svg" alt="support" width="64" height="64">
                     </div>
                     <h4 class="services-title">Comprehensive daily legal support</h4>
                     <p class="services-description">In addition, over time, the work will become the same type and uninteresting for a full-time lawyer. And we know very well how difficult it is to find a good candidate with experience in the field of information technology in Ukraine.</p>
                 </div>
                 <div class="services-block">
                     <div class="services-icon">
-                        <img src="./assets/images/corporate-icon.svg" alt="corporate" width="64" height="64" class="services-img">
+                        <img src="./assets/images/corporate-icon.svg" alt="corporate" width="64" height="64">
                     </div>
                     <h4 class="services-title">Structuring corporate relationships</h4>
                     <p class="services-description">Instead of just providing legal services, we will hire a lawyer or a whole team that will fit into the daily life of your company.</p>
                 </div>
                 <div class="services-block">
                     <div class="services-icon">
-                        <img src="./assets/images/trust-icon.svg" alt="trust" width="64" height="64" class="services-img">
+                        <img src="./assets/images/trust-icon.svg" alt="trust" width="64" height="64">
                     </div>
                     <h4 class="services-title">Building contractual relations</h4>
                     <p class="services-description">Once a week, or week after month, you have your own lawyer by your side. Anyone in the company can catch it at the coffee maker and just talk about current affairs instead of waiting for update status.</p>
                 </div>
                 <div class="services-block">
                     <div class="services-icon">
-                        <img src="./assets/images/protection-icon.svg" alt="protection" width="64" height="64" class="services-img">
+                        <img src="./assets/images/protection-icon.svg" alt="protection" width="64" height="64">
                     </div>
                     <h4 class="services-title">Protection of business, intellectual property</h4>
                     <p class="services-description">And all the other time he will work on new diverse projects, so he will definitely not stop in professional development. One way or another, all Axon Partners will work for you instead of a corporate lawyer.</p>
                 </div>
                 <div class="services-block">
                     <div class="services-icon">
-                        <img src="./assets/images/court-icon.svg" alt="court" width="64" height="64" class="services-img">
+                        <img src="./assets/images/court-icon.svg" alt="court" width="64" height="64">
                     </div>
                     <h4 class="services-title">Judicial representation</h4>
                     <p class="services-description">Is it a small, medium-sized company or a market leader? Local business or multinational company? Do you have your own legal department or not?</p>
@@ -64,8 +64,10 @@
     <div class="wrapper slider">
         <div class="slider-bg">
             <div class="slider-blocks">
-                <div class="slider-bg-img">
-                </div>
+               <picture class="slider-bg-img">
+                        <source srcset="./assets/images/slider-image-horiz.jpg" media="(min-width: 1440px)" />
+                        <img src="./assets/images/slider-image.jpg" alt="Олександр Олександровський" />
+                </picture>
                 <div class="slider-content">
                     <a href="#"><span class="subtitle">команда</span></a>
                     <h3 class="hero">Ми звикли брати на себе відповідальність та завжди гарантуємо чесну, вчасну допомогу, навіть у ситуаціях, коли більшість безсилі.</h3>
@@ -117,6 +119,39 @@
         <a href="#" class="logos-main logos-12">
             <img src="./assets/images/ultimate-card-logo.png" alt="ultimate-card" width="152" height="95">
         </a>
+    </section>
+    <section class="publications">
+        <div class="wrapper">
+            <a href="#"><span class="subtitle">Publications</span></a>
+            <h3 class="hero hero-services">We have something to tell</h3>
+            <div class="publications-all">
+                <div class="publication">
+                    <img src="./assets/images/publication-1.jpg" class="publication-img" alt="Equity associate">
+                    <div class="publication-content">
+                        <a href="#" class="publication-blue">Equity associate</a>
+                        <p class="publication-date">April 22</p>
+                        <p class="publication-description">I'm a jun on projects. I am a co-owner of a law firm. How it happened. Before entering my parents told me that if I I'm a jun on projects. I am a co-owner of a law firm. How it happened. Before entering my parents told me that if I</p>
+                    </div>
+                </div>
+                <div class="publication">
+                    <img src="./assets/images/publication-2.jpg" class="publication-img" alt="Penalty for the Good Corporation">
+                    <div class="publication-content">
+                        <a href="#" class="publication-blue">Penalty for the Good Corporation: what will happen to Google and others for violating the GDPR</a>
+                        <p class="publication-date">September 29</p>
+                        <p class="publication-description">And why the recovery of 50 million euros could be a fateful precedent According to Mind.ua January 21 National Commission for Data Protection.</p>
+                    </div>
+                </div>
+                <div class="publication">
+                    <img src="./assets/images/publication-3.jpg" class="publication-img" alt="Millennial Testament">
+                    <div class="publication-content">
+                        <a href="#" class="publication-blue">Millennial Testament</a>
+                        <p class="publication-date">August 19</p>
+                        <p class="publication-description">What and how modern vloggers, opinion leaders and crypto-millionaires will inherit A typical legacy of the Ukrainian generation X looks like this: an apartment.</p>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
     </section>
 </body>
 </html>
