some fixes in slider

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
     <div class="wrapper slider">
         <div class="slider-bg">
             <div class="slider-blocks">
-               <picture class="slider-bg-img">
+               <picture>
                         <source srcset="./assets/images/slider-image-horiz.jpg" media="(min-width: 1440px)" />
-                        <img src="./assets/images/slider-image.jpg" alt="Олександр Олександровський" />
+                        <img src="./assets/images/slider-image.jpg" class="slider-bg-img" alt="Олександр Олександровський" />
                 </picture>
                 <div class="slider-content">
                     <a href="#"><span class="subtitle">команда</span></a>
@@ -123,12 +123,12 @@
     <section class="publications">
         <div class="wrapper">
             <a href="#"><span class="subtitle">Publications</span></a>
-            <h3 class="hero hero-services">We have something to tell</h3>
+            <h3 class="hero">We have something to tell</h3>
             <div class="publications-all">
                 <div class="publication">
                     <img src="./assets/images/publication-1.jpg" class="publication-img" alt="Equity associate">
                     <div class="publication-content">
-                        <a href="#" class="publication-blue">Equity associate</a>
+                        <a href="#" class="publication-h4-blue">Equity associate</a>
                         <p class="publication-date">April 22</p>
                         <p class="publication-description">I'm a jun on projects. I am a co-owner of a law firm. How it happened. Before entering my parents told me that if I I'm a jun on projects. I am a co-owner of a law firm. How it happened. Before entering my parents told me that if I</p>
                     </div>
@@ -136,7 +136,7 @@
                 <div class="publication">
                     <img src="./assets/images/publication-2.jpg" class="publication-img" alt="Penalty for the Good Corporation">
                     <div class="publication-content">
-                        <a href="#" class="publication-blue">Penalty for the Good Corporation: what will happen to Google and others for violating the GDPR</a>
+                        <a href="#" class="publication-h4-blue">Penalty for the Good Corporation: what will happen to Google and others for violating the GDPR</a>
                         <p class="publication-date">September 29</p>
                         <p class="publication-description">And why the recovery of 50 million euros could be a fateful precedent According to Mind.ua January 21 National Commission for Data Protection.</p>
                     </div>
@@ -144,7 +144,7 @@
                 <div class="publication">
                     <img src="./assets/images/publication-3.jpg" class="publication-img" alt="Millennial Testament">
                     <div class="publication-content">
-                        <a href="#" class="publication-blue">Millennial Testament</a>
+                        <a href="#" class="publication-h4-blue">Millennial Testament</a>
                         <p class="publication-date">August 19</p>
                         <p class="publication-description">What and how modern vloggers, opinion leaders and crypto-millionaires will inherit A typical legacy of the Ukrainian generation X looks like this: an apartment.</p>
                     </div>
