--- a/index.html
+++ b/index.html
@@ -11,70 +11,105 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <section class="main-services">
-        <div class="advantages-links">
-            <div class="nav-main-screen">
-                <a href="#" class="nav-main-screen-active">Consistent</a>
-                <a href="#">Customer oriented</a>
-                <a href="#">Innovative</a>
-                <a href="#">Business oriented</a>
-            </div>
-            <div class="advantages">
-                <div class="wrapper">
-                    <h2 class="h2-mobile">We turn the idea of legal services</h2>
-                <p class="introduction">Consolidating many years of experience and practice, the company's lawyers accompany complex projects and achieve a number of important decisions for the industry. Many of them form the practice of applying the law of the sea in Ukraine.</p>
-                </div>   
-            </div>
-        </div>
-        <div class="wrapper">
-            <a href="#"><span class="subtitle">Services</span></a>
-            <h3 class="hero hero-services">What can we do better than others?</h3>
-            <div class="services-blocks">
-                <div class="services-block">
-                    <div class="services-icon">
-                        <img src="./assets/images/ecommerce-icon.svg" alt="ecommerce" width="64" height="64">
-                    </div>
-                <h4 class="services-title">IT and e-commerce</h4>
-                <p class="services-description">An endless stream of contracts, tax issues, labor relations, corporate papers - legal work distracts you from doing business. But there is not much work to do to hire an in-house lawyer.</p>
+    <div class="background">
+        <header class="header">
+            <div>
+                <div class="header-top">
+                    <nav class="nav-top">
+                        <a href="#" class="nav-top__item">УК</a>
+                        <a href="#" class="nav-top__item">РУ</a>
+                        <a href="#" class="nav-top__item nav-top__item--active">EN</a>
+                    </nav>
+                    <p class="header__adress">Kyiv, Mechnikova str., 14/1</p>
+                    <a href="tel:0800 211 927" class="nav-top__phone">0800 211 927</a>
+                    <a href="#"><img src="./assets/images/facebook-header.svg" class="header__fb" alt="facebook"></a>
                 </div>
-                <div class="services-block">
-                    <div class="services-icon">
-                        <img src="./assets/images/support-icon.svg" alt="support" width="64" height="64">
+                <div class="header-bottom">
+                    <div class="header-bottom__left">
+                        <a href="#">
+                            <img src="./assets/images/logo-header-mobile.svg" class="header-bottom__logo" alt="logo">
+                        </a>
+                        <a href="#" class="header-bottom__link">services</a>
                     </div>
-                    <h4 class="services-title">Comprehensive daily legal support</h4>
-                    <p class="services-description">In addition, over time, the work will become the same type and uninteresting for a full-time lawyer. And we know very well how difficult it is to find a good candidate with experience in the field of information technology in Ukraine.</p>
-                </div>
-                <div class="services-block">
-                    <div class="services-icon">
-                        <img src="./assets/images/corporate-icon.svg" alt="corporate" width="64" height="64">
+                    <div class="header-bottom__menu-btn">
+                        <span></span>
+                        <span></span>
+                        <span></span>
                     </div>
-                    <h4 class="services-title">Structuring corporate relationships</h4>
-                    <p class="services-description">Instead of just providing legal services, we will hire a lawyer or a whole team that will fit into the daily life of your company.</p>
-                </div>
-                <div class="services-block">
-                    <div class="services-icon">
-                        <img src="./assets/images/trust-icon.svg" alt="trust" width="64" height="64">
-                    </div>
-                    <h4 class="services-title">Building contractual relations</h4>
-                    <p class="services-description">Once a week, or week after month, you have your own lawyer by your side. Anyone in the company can catch it at the coffee maker and just talk about current affairs instead of waiting for update status.</p>
-                </div>
-                <div class="services-block">
-                    <div class="services-icon">
-                        <img src="./assets/images/protection-icon.svg" alt="protection" width="64" height="64">
-                    </div>
-                    <h4 class="services-title">Protection of business, intellectual property</h4>
-                    <p class="services-description">And all the other time he will work on new diverse projects, so he will definitely not stop in professional development. One way or another, all Axon Partners will work for you instead of a corporate lawyer.</p>
-                </div>
-                <div class="services-block">
-                    <div class="services-icon">
-                        <img src="./assets/images/court-icon.svg" alt="court" width="64" height="64">
-                    </div>
-                    <h4 class="services-title">Judicial representation</h4>
-                    <p class="services-description">Is it a small, medium-sized company or a market leader? Local business or multinational company? Do you have your own legal department or not?</p>
                 </div>
             </div>
-        </div>
-    </section>
+            <h1 class="header__title">
+                you legal solutions provider
+            </h1>
+            <div class="header__scroll">
+                <a href="#"></a>
+            </div>
+        </header>
+        <section class="main-services">
+            <div class="advantages-links">
+                <div class="nav-main-screen">
+                    <a href="#" class="nav-main-screen-active">Consistent</a>
+                    <a href="#">Customer oriented</a>
+                    <a href="#">Innovative</a>
+                    <a href="#">Business oriented</a>
+                </div>
+                <div class="advantages">
+                    <div class="wrapper">
+                        <h2 class="h2-mobile">We turn the idea of legal services</h2>
+                    <p class="introduction">Consolidating many years of experience and practice, the company's lawyers accompany complex projects and achieve a number of important decisions for the industry. Many of them form the practice of applying the law of the sea in Ukraine.</p>
+                    </div>   
+                </div>
+            </div>
+            <div class="wrapper">
+                <a href="#"><span class="subtitle">Services</span></a>
+                <h3 class="hero hero-services">What can we do better than others?</h3>
+                <div class="services-blocks">
+                    <div class="services-block">
+                        <div class="services-icon">
+                            <img src="./assets/images/ecommerce-icon.svg" alt="ecommerce" width="64" height="64">
+                        </div>
+                    <h4 class="services-title">IT and e-commerce</h4>
+                    <p class="services-description">An endless stream of contracts, tax issues, labor relations, corporate papers - legal work distracts you from doing business. But there is not much work to do to hire an in-house lawyer.</p>
+                    </div>
+                    <div class="services-block">
+                        <div class="services-icon">
+                            <img src="./assets/images/support-icon.svg" alt="support" width="64" height="64">
+                        </div>
+                        <h4 class="services-title">Comprehensive daily legal support</h4>
+                        <p class="services-description">In addition, over time, the work will become the same type and uninteresting for a full-time lawyer. And we know very well how difficult it is to find a good candidate with experience in the field of information technology in Ukraine.</p>
+                    </div>
+                    <div class="services-block">
+                        <div class="services-icon">
+                            <img src="./assets/images/corporate-icon.svg" alt="corporate" width="64" height="64">
+                        </div>
+                        <h4 class="services-title">Structuring corporate relationships</h4>
+                        <p class="services-description">Instead of just providing legal services, we will hire a lawyer or a whole team that will fit into the daily life of your company.</p>
+                    </div>
+                    <div class="services-block">
+                        <div class="services-icon">
+                            <img src="./assets/images/trust-icon.svg" alt="trust" width="64" height="64">
+                        </div>
+                        <h4 class="services-title">Building contractual relations</h4>
+                        <p class="services-description">Once a week, or week after month, you have your own lawyer by your side. Anyone in the company can catch it at the coffee maker and just talk about current affairs instead of waiting for update status.</p>
+                    </div>
+                    <div class="services-block">
+                        <div class="services-icon">
+                            <img src="./assets/images/protection-icon.svg" alt="protection" width="64" height="64">
+                        </div>
+                        <h4 class="services-title">Protection of business, intellectual property</h4>
+                        <p class="services-description">And all the other time he will work on new diverse projects, so he will definitely not stop in professional development. One way or another, all Axon Partners will work for you instead of a corporate lawyer.</p>
+                    </div>
+                    <div class="services-block">
+                        <div class="services-icon">
+                            <img src="./assets/images/court-icon.svg" alt="court" width="64" height="64">
+                        </div>
+                        <h4 class="services-title">Judicial representation</h4>
+                        <p class="services-description">Is it a small, medium-sized company or a market leader? Local business or multinational company? Do you have your own legal department or not?</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
     <div class="wrapper slider">
         <div class="slider-bg">
             <div class="slider-blocks">
