--- a/index.html
+++ b/index.html
@@ -31,18 +31,22 @@
                         </a>
                         <a href="#" class="header-graphic-linkmb">services</a>
                     </div>
-                    <button type="button" class="burger">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </button>
-                </div>
-                <div class="header-menu">
-                    <a href="#">about us</a>
-                    <a href="#">services</a>
-                    <a href="#">team</a>
-                    <a href="#">publications</a>
-                    <a href="#">contact</a>
+                    <div class="menu menu--opened">
+                        <input id="menu__toggle" type="checkbox" />
+                        <label class="menu__btn" for="menu__toggle">
+                          <span></span>
+                        </label>
+                        <div class="menu__bottom">
+                            <ul class="menu__box">
+                                <li><a class="menu__item" href="#">about us</a></li>
+                                <li><a class="menu__item" href="#">services</a></li>
+                                <li><a class="menu__item" href="#">team</a></li>
+                                <li><a class="menu__item menu__item--active" href="#">publications</a></li>
+                                <li><a class="menu__item" href="#">contact</a></li>
+                                <button class="menu__close">X</button>
+                              </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
             <h1 class="header-title">
@@ -216,11 +220,12 @@
             <div class="footer-info">
                 <span>
                     <p class="footer-adress">Kyiv, Mechnikova str., 14/1</p>
-                    <a href="" class="footer-map">On map</a>
+                    <p><a href="" class="footer-map">On map</a></p>
                 </span>
-                <span>
-                    <a href="tel:0800211927" class="footer-phone">0800 211 927</a>
-                    <a href="mailto:contact@forstudy.space" class="footer-email">contact@forstudy.space</a>
+                <span class="footer-fb">
+                    <img src="./assets/images/facebook-footer.svg" class="footer-fb" alt="facebook" width="38" height="38">
+                    <p><a href="tel:0800211927" class="footer-phone">0800 211 927</a></p>
+                    <p><a href="mailto:contact@forstudy.space" class="footer-email">contact@forstudy.space</a></p>
                 </span>
             </div>
             <address class="footer-copyright">© 2021 HLEGAL Law company, LLC</address>
