--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         </a>
                         <a href="#" class="header-graphic-linkmb">services</a>
                     </div>
-                    <div class="menu menu--opened">
+                    <div class="menu">
                         <input id="menu__toggle" type="checkbox" />
                         <label class="menu__btn" for="menu__toggle">
                           <span></span>
@@ -43,7 +43,6 @@
                                 <li><a class="menu__item" href="#">team</a></li>
                                 <li><a class="menu__item menu__item--active" href="#">publications</a></li>
                                 <li><a class="menu__item" href="#">contact</a></li>
-                                <button class="menu__close">X</button>
                               </ul>
                         </div>
                     </div>
@@ -218,14 +217,14 @@
     <footer class="footer">
         <div class="wrapper">
             <div class="footer-info">
-                <span>
+                <span class="footer-local">
                     <p class="footer-adress">Kyiv, Mechnikova str., 14/1</p>
                     <p><a href="" class="footer-map">On map</a></p>
                 </span>
-                <span class="footer-fb">
-                    <img src="./assets/images/facebook-footer.svg" class="footer-fb" alt="facebook" width="38" height="38">
-                    <p><a href="tel:0800211927" class="footer-phone">0800 211 927</a></p>
-                    <p><a href="mailto:contact@forstudy.space" class="footer-email">contact@forstudy.space</a></p>
+                <span class="footer-contact">
+                    <p class="footer-item"><img src="./assets/images/facebook-footer.svg" class="footer-fb" alt="facebook" width="38" height="38"></p>
+                    <p class="footer-item"><a href="tel:0800211927" class="footer-phone">0800 211 927</a></p>
+                    <p class="footer-item"><a href="mailto:contact@forstudy.space" class="footer-email">contact@forstudy.space</a></p>
                 </span>
             </div>
             <address class="footer-copyright">© 2021 HLEGAL Law company, LLC</address>
