--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     <p><a href="" class="footer-map">On map</a></p>
                 </span>
                 <span class="footer-contact">
-                    <p class="footer-item"><img src="./assets/images/facebook-footer.svg" class="footer-fb" alt="facebook" width="38" height="38"></p>
+                    <p class="footer-item"><img src="./assets/images/facebook-footer.svg" class="footer-fb" alt="facebook-logo" width="38" height="38"></p>
                     <p class="footer-item"><a href="tel:0800211927" class="footer-phone">0800 211 927</a></p>
                     <p class="footer-item"><a href="mailto:contact@forstudy.space" class="footer-email">contact@forstudy.space</a></p>
                 </span>
