--- a/index.html
+++ b/index.html
@@ -15,34 +15,33 @@
         <header class="header">
             <div class="header-full">
                 <div class="header-info">
-                    <nav class="header-lang nav-tablet-top">
+                    <nav class="header-lang nav-tablet-top hi-item">
                         <a href="#" class="header-lang__item">УК</a>
                         <a href="#" class="header-lang__item">РУ</a>
                         <a href="#" class="header-lang__item header-lang__item--active">EN</a>
                     </nav>
-                    <p class="header-adress nav-tablet-top">Kyiv, Mechnikova str., 14/1</p>
-                    <a href="tel:0800211927" class="header-phone nav-tablet-top">0800 211 927</a>
-                    <a href="#"><img src="./assets/images/facebook-header.svg" class="header-fb nav-tablet-top" alt="facebook"></a>
+                    <p class="header-adress nav-tablet-top hi-item">Kyiv, Mechnikova str., 14/1</p>
+                    <a href="tel:0800211927" class="header-phone nav-tablet-top hi-item">0800 211 927</a>
+                    <a href="#" class="hi-item"><img src="./assets/images/facebook-header.svg" class="header-fb nav-tablet-top" alt="facebook"></a>
                 </div>
                 <div class="header-graphic">
                     <div class="header-graphic-left">
                         <a href="#">
                             <img src="./assets/images/logo-header-mobile.svg" class="header-graphic-logo" alt="logo" width="70" height="32">
                         </a>
-                        <a href="#" class="header-graphic-linkmb">services</a>
                     </div>
-                    <div class="menu">
-                        <input id="menu__toggle" type="checkbox" />
-                        <label class="menu__btn" for="menu__toggle">
+                    <div class="header-graphic-menu">
+                        <input id="header-graphic-menu-toggle" type="checkbox" />
+                        <label class="header-graphic-menu-btn" for="header-graphic-menu-toggle">
                           <span></span>
                         </label>
-                        <div class="menu__bottom">
-                            <ul class="menu__box">
-                                <li><a class="menu__item" href="#">about us</a></li>
-                                <li><a class="menu__item" href="#">services</a></li>
-                                <li><a class="menu__item" href="#">team</a></li>
-                                <li><a class="menu__item menu__item--active" href="#">publications</a></li>
-                                <li><a class="menu__item" href="#">contact</a></li>
+                        <div class="header-graphic-menu-bottom">
+                            <ul class="header-graphic-menu-box">
+                                <li><a class="header-graphic-menu-item" href="#">about us</a></li>
+                                <li><a class="header-graphic-menu-item" href="#">services</a></li>
+                                <li><a class="header-graphic-menu-item" href="#">team</a></li>
+                                <li><a class="header-graphic-menu-item header-graphic-menu-item-active" href="#">publications</a></li>
+                                <li><a class="header-graphic-menu-item" href="#">contact</a></li>
                               </ul>
                         </div>
                     </div>
@@ -216,18 +215,18 @@
     </main>
     <footer class="footer">
         <div class="wrapper">
-            <div class="footer-info">
-                <span class="footer-local">
+            <div class="footer-line">
+                <div class="footer-info">
                     <p class="footer-adress">Kyiv, Mechnikova str., 14/1</p>
                     <p><a href="" class="footer-map">On map</a></p>
-                </span>
-                <span class="footer-contact">
+                </div>
+                <div class="footer-social">
                     <p class="footer-item"><img src="./assets/images/facebook-footer.svg" class="footer-fb" alt="facebook-logo" width="38" height="38"></p>
                     <p class="footer-item"><a href="tel:0800211927" class="footer-phone">0800 211 927</a></p>
                     <p class="footer-item"><a href="mailto:contact@forstudy.space" class="footer-email">contact@forstudy.space</a></p>
-                </span>
+                </div>
+                <address class="footer-copyright">© 2021 HLEGAL Law company, LLC</address>
             </div>
-            <address class="footer-copyright">© 2021 HLEGAL Law company, LLC</address>
         </div>
     </footer>
 </body>
