add close button to menu

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                         </label>
                         <div class="header-graphic-menu-bottom">
                             <ul class="header-graphic-menu-box">
+                                <button class="close" type="button"></button>
                                 <li><a class="header-graphic-menu-item" href="#">about us</a></li>
                                 <li><a class="header-graphic-menu-item" href="#">services</a></li>
                                 <li><a class="header-graphic-menu-item" href="#">team</a></li>
